rtg_tests/negative/unused_import/cmd/app/main.go
package main

import "example.com/rtgtests/negative/unused_import/lib"

func main() {}
